@@ -1,11 +1,22 @@
 #!/usr/bin/perl
 #
-# t/pod.t -- Test POD formatting for Term::ANSIColor.
+# Check all POD documents for POD formatting errors.
 #
-# Taken essentially verbatim from the examples in the Test::Pod documentation.
+# Copyright 2012 Russ Allbery <rra@stanford.edu>
+#
+# This program is free software; you may redistribute it and/or modify it
+# under the same terms as Perl itself.
 
 use strict;
+use warnings;
+
 use Test::More;
-eval 'use Test::Pod 1.00';
-plan skip_all => "Test::Pod 1.00 required for testing POD" if $@;
-all_pod_files_ok ();
+
+# Skip tests if Test::Pod is not installed.
+if (!eval { require Test::Pod }) {
+    plan skip_all => 'Test::Pod required to test POD syntax';
+}
+Test::Pod->import;
+
+# Check all POD in the Perl distribution.
+all_pod_files_ok();
