@@ -1,3 +1,9 @@
+2012-12-28  Russ Allbery  <rra@stanford.edu>
+
+	* t/pod.t: Update coding style.
+	* t/pod-spelling.t: Use Test::Spelling instead of including a
+	less-tested version of the same code.  Update coding style.
+
 2012-03-18  Russ Allbery  <rra@stanford.edu>
 
 	* ANSIColor.pm: Version 3.02 released.
